--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:p6spy:mariadb://localhost:3306/app_db
+    url: jdbc:mariadb://127.0.0.1:3306/app_db
     username: user
     password: pass
-    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+#    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
   jpa:
     hibernate:
       ddl-auto: create
