--- a/src/main/resources/spy.properties
+++ b/src/main/resources/spy.properties
@@ -1,5 +1,5 @@
 # ??? ?? ??
-appender=com.demo.demo1racecondition.config.SkipEmptyLogger
+appender=com.demo.demo1racecondition.common.config.SkipEmptyLogger
 
 # ??? SQL? ????
 logMessageFormat=com.p6spy.engine.spy.appender.CustomLineFormat
