--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,23 @@ spring:
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 logging:
   level:
-    p6spy: info
+    root: off
+    p6spy: off
+    com.demo.demo1racecondition: debug
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger - %msg%n"
+  file:
+    name: logs/app.log          # 로그 파일 경로
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 30
