--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-only
 
   data:
     redis:
