--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,8 @@ spring:
 
 logging:
   level:
-    root: off
-    p6spy: off
+    root: info
+    p6spy: info
     com.demo.demo1racecondition: debug
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger - %msg%n"
